--- a/app/package.json
+++ b/app/package.json
@@ -15,30 +15,31 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "scheduler": "^0.23.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
+    "firebase": "^11.6.0",
     "firebase-admin": "^11.10.1",
-    "zustand": "^3.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "scheduler": "^0.23.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.1.0",
+    "@vitest/ui": "^3.1.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "@eslint/js": "^9.21.0",
     "globals": "^15.15.0",
-    "vite": "^6.2.0",
-    "vitest": "^3.1.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/ui": "^3.1.0",
-    "@vitest/coverage-v8": "^3.1.0",
     "istanbul-lib-source-maps": "^4.0.0",
-    "jsdom": "^24.0.0"
+    "jsdom": "^24.0.0",
+    "vite": "^6.2.0",
+    "vitest": "^3.1.0"
   }
 }
