--- a/app/package.json
+++ b/app/package.json
@@ -22,13 +22,14 @@
     "firebase-admin": "^11.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.3",
     "scheduler": "^0.23.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.1.0",
@@ -38,8 +39,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "istanbul-lib-source-maps": "^4.0.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.3",
     "vite": "^6.2.0",
-    "vitest": "^3.1.0"
+    "vitest": "^3.1.2"
   }
 }
